--- a/TrashManagement/Views/MySettings.cshtml
+++ b/TrashManagement/Views/MySettings.cshtml
@@ -1,16 +1,16 @@
 ﻿@model TrashManagement.Models.Customer
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "MySettings";
 }
 
-<h1>Edit</h1>
+<h1>MySettings</h1>
 
 <h4>Customer</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="MySettings">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
