--- a/TrashManagement/Views/Customers/Edit.cshtml
+++ b/TrashManagement/Views/Customers/Edit.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewData["Title"] = "Edit";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Edit</h1>
@@ -20,9 +19,34 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="pickupDay" class="control-label"></label>
+                <input asp-for="pickupDay" class="form-control" />
+                <span asp-validation-for="pickupDay" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="street" class="control-label"></label>
+                <input asp-for="street" class="form-control" />
+                <span asp-validation-for="street" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="zipCode" class="control-label"></label>
+                <input asp-for="zipCode" class="form-control" />
+                <span asp-validation-for="zipCode" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="IdentityUserId" class="control-label"></label>
                 <select asp-for="IdentityUserId" class="form-control" asp-items="ViewBag.IdentityUserId"></select>
                 <span asp-validation-for="IdentityUserId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="suspendStart" class="control-label"></label>
+                <input asp-for="suspendStart" class="form-control" />
+                <span asp-validation-for="suspendStart" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="suspendEnd" class="control-label"></label>
+                <input asp-for="suspendEnd" class="form-control" />
+                <span asp-validation-for="suspendEnd" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
