--- a/TrashManagement/Views/Customers/Index.cshtml
+++ b/TrashManagement/Views/Customers/Index.cshtml
@@ -1,42 +1,58 @@
-﻿@model IEnumerable<TrashManagement.Models.Customer>
+﻿@model TrashManagement.Models.Customer
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdentityUser)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdentityUser.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
+
+
+
+<h1>My Account</h1>
+
+<table class="tg">
+    <tr>
+        <th class="tg-0lax">Name:</th>
+        <th class="tg-0lax">@Html.DisplayFor(model => model.Name)</th>
+
+    </tr>
+    <tr>
+        <td class="tg-0lax">Pickup Day:</td>
+        <td class="tg-0lax">@Html.DisplayFor(model => model.pickupDay)</td>
+
+    </tr>
+    <tr>
+        <td class="tg-0lax">Street:</td>
+        <td class="tg-0lax">@Html.DisplayFor(model => model.street)</td>
+
+    </tr>
+    <tr>
+        <td class="tg-0lax">Zip:</td>
+        <td class="tg-0lax">@Html.DisplayFor(model => model.zipCode)</td>
+
+    </tr>
+    <tr>
+        <td class="tg-0lax">Suspend Start:</td>
+        <td class="tg-0lax">@Html.DisplayFor(model => model.suspendStart)</td>
+
+    </tr>
+    <tr>
+        <td class="tg-0lax">Suspend End:</td>
+        <td class="tg-0lax">@Html.DisplayFor(model => model.suspendEnd)</td>
+
+    </tr>
+
+    <th class="tg-0lax"><a asp-action="Edit" asp-route-id="@Model.Id">Edit Details</a> </th>
 </table>
+
+
+
+
+
+
+
+
+
+    
+
