--- a/TrashManagement/Views/Customers/MySettings.cshtml
+++ b/TrashManagement/Views/Customers/MySettings.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<TrashManagement.Models.Customer>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "MySettings";
 }
 
-<h1>Index</h1>
+<h1>MySettings</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -30,6 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.zipCode)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IdentityUser)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -53,6 +56,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.zipCode)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IdentityUser.Id)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
