--- a/TrashManagement/Views/Employees/Create.cshtml
+++ b/TrashManagement/Views/Employees/Create.cshtml
@@ -1,13 +1,12 @@
-﻿@model TrashManagement.Models.Employee
+﻿@model TrashManagement.Models.Customer
 
 @{
     ViewData["Title"] = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Create</h1>
 
-<h4>Employee</h4>
+<h4>Customer</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,6 +16,31 @@
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="pickupDay" class="control-label"></label>
+                <input asp-for="pickupDay" class="form-control" />
+                <span asp-validation-for="pickupDay" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="suspendStart" class="control-label"></label>
+                <input asp-for="suspendStart" class="form-control" />
+                <span asp-validation-for="suspendStart" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="suspendEnd" class="control-label"></label>
+                <input asp-for="suspendEnd" class="form-control" />
+                <span asp-validation-for="suspendEnd" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="street" class="control-label"></label>
+                <input asp-for="street" class="form-control" />
+                <span asp-validation-for="street" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="zipCode" class="control-label"></label>
+                <input asp-for="zipCode" class="form-control" />
+                <span asp-validation-for="zipCode" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdentityUserId" class="control-label"></label>
