--- a/TrashManagement/Views/Customers/Index.cshtml
+++ b/TrashManagement/Views/Customers/Index.cshtml
@@ -43,7 +43,7 @@
 
     </tr>
 
-    <th class="tg-0lax"><a asp-action="Edit" asp-route-id="@Model.Id">Edit Details</a> </th>
+    <tr class="tg-0lax"><td><a asp-action="Edit" asp-route-id="@Model.Id">Edit Details</a></td> </tr>
 </table>
 
 
@@ -54,5 +54,5 @@
 
 
 
-    
+
 
