Final Commit before submission

--- a/TrashManagement/Views/Customers/Index.cshtml
+++ b/TrashManagement/Views/Customers/Index.cshtml
@@ -48,7 +48,8 @@
 
     </tr>
 
-    <tr class="tg-0lax"><td><a asp-action="Edit" asp-route-id="@Model.Id">Edit Details</a></td><td><a asp-action="Edit" asp-route-id="@Model.Id">Schedule Monthly Pickup</a></td> </tr>
+    <tr class="tg-0lax"><td><a asp-action="Edit" asp-route-id="@Model.Id">Edit Details</a></td>
+    <td><a asp-action="Edit" asp-route-id="@Model.Id">Schedule Monthly Pickup</a></td> </tr>
 </table>
 
 
