--- a/TrashManagement/Views/Customers/Edit.cshtml
+++ b/TrashManagement/Views/Customers/Edit.cshtml
@@ -13,6 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="IdentityUserId" /> 
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -33,11 +34,7 @@
                 <input asp-for="zipCode" class="form-control" />
                 <span asp-validation-for="zipCode" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="IdentityUserId" class="control-label"></label>
-                <select asp-for="IdentityUserId" class="form-control" asp-items="ViewBag.IdentityUserId"></select>
-                <span asp-validation-for="IdentityUserId" class="text-danger"></span>
-            </div>
+          
             <div class="form-group">
                 <label asp-for="suspendStart" class="control-label"></label>
                 <input asp-for="suspendStart" class="form-control" />
