added employee customer list

--- a/TrashManagement/Views/Customers/Index.cshtml
+++ b/TrashManagement/Views/Customers/Index.cshtml
@@ -43,7 +43,7 @@
 
     </tr>
     <tr>
-        <td class="tg-0lax">Suspend End:</td>
+        <td class="tg-0lax">This Month's Balance:</td>
         <td class="tg-0lax">@Html.DisplayFor(model => model.monthlyBalance)</td>
 
     </tr>
