--- a/TrashManagement/Views/Employees/Create.cshtml
+++ b/TrashManagement/Views/Employees/Create.cshtml
@@ -1,12 +1,12 @@
-﻿@model TrashManagement.Models.Customer
+﻿@model TrashManagement.Models.Employee
 
 @{
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Create New</h1>
 
-<h4>Customer</h4>
+<h4>Employee</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,45 +18,20 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="pickupDay" class="control-label"></label>
-                <input asp-for="pickupDay" class="form-control" />
-                <span asp-validation-for="pickupDay" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="suspendStart" class="control-label"></label>
-                <input asp-for="suspendStart" class="form-control" />
-                <span asp-validation-for="suspendStart" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="suspendEnd" class="control-label"></label>
-                <input asp-for="suspendEnd" class="form-control" />
-                <span asp-validation-for="suspendEnd" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="street" class="control-label"></label>
-                <input asp-for="street" class="form-control" />
-                <span asp-validation-for="street" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="zipCode" class="control-label"></label>
-                <input asp-for="zipCode" class="form-control" />
-                <span asp-validation-for="zipCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdentityUserId" class="control-label"></label>
-                <select asp-for="IdentityUserId" class ="form-control" asp-items="ViewBag.IdentityUserId"></select>
+                <input type="hidden" asp-for="IdentityUserId" />
+
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
+    </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+    <div>
+        <a asp-action="Index">Back to List</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
